--- a/index.html
+++ b/index.html
@@ -46,21 +46,21 @@ At Durga Engineering Works, we specialize in submersible motor pumps, offering q
 	<section id="boxes">
 		<div class="container">
 			<div class="box">
-				<img src="./img/cri_html.jpg">
+				<img src="cri_html.jpg">
 				<h3>CRI Pumps</h3>
 				<p>
 CRI Pumps offers reliable, energy-efficient submersible pumps and motors designed for long life and strong performance. Ideal for home, agriculture, and industrial use, CRI products ensure consistent water flow with trusted quality.
 </p>
 			</div>
 			<div class="box">
-			<img src="./img/texmo_html.jpg">
+			<img src="texmo_html.jpg">
 			<h3>Texmo</h3>
 			<p>
 Texmo Pumps is a well-known brand offering durable and energy-efficient submersible pumps and motors. Designed for domestic, agricultural, and industrial applications, Texmo products provide reliable performance, long life, and consistent water flow.
 </p>
 </div>
 			<div class="box">
-			<img src="./img/unnati_html.jpg">
+			<img src="unnati_html.jpg">
 			<h3>unnati</h3>
 			<p>
 			Unnati Motor delivers reliable, high-performance motors designed for long life and consistent water flow.</p>
@@ -71,4 +71,5 @@ Texmo Pumps is a well-known brand offering durable and energy-efficient submersi
 		<p>Durga Engineering Works, Copyrigth &copy; 2026</p>
 	</footer>
 </body>
+
 </html>
