--- a/services.html
+++ b/services.html
@@ -96,18 +96,14 @@
 				<h3>Details</h3>
 				<form class="quote">
 					<div>
-						<label>Name</label><br>
-						<input type="text" placeholder="Name">
+						<label>Name:BOPPANA VENKATA DAMODARA RAO</label><br>
 					</div>
 					<div>
-						<label>Email</label><br>
-						<input type="email" placeholder="Email Address">
+						<label>Address:chintalapudi</label><br>
 					</div>
 					<div>
-						<label>Phone Number</label><br>
-						<textarea placeholder="Phone Number"></textarea>
+						<label>Phone Number:9399910100</label><br>
 					</div>
-					<button class="button_1"type="submit">send</button>
 				</form>
 				</div>
 			</aside>			
@@ -117,4 +113,5 @@
 		<p>Durga Engineering Works, Copyrigth &copy; 2026</p>
 	</footer>
 </body>
+
 </html>
